# conjure-blender

./: .gitignore  README.md  __init__.py  blender_manifest.toml  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
conjure/: __init__.py
conjure/adapters/: __init__.py  blender_adapter.py  geometry_adapter.py  nodes_adapter.py  simulation_adapter.py
conjure/engine/: __init__.py  blender_server.py  command_executor.py
conjure/operators/: __init__.py  animation.py  connection.py  physics.py  primitives.py  queries.py  transforms.py
conjure/panels/: __init__.py  main_panel.py
conjure/ui/: __init__.py
conjure/utils/: __init__.py  conversion.py
