[project]
name = "conjure-blender"
version = "0.1.0"
description = "Blender add-on for AI-assisted 3D modeling with Conjure"
readme = "README.md"
license = "MIT"
authors = [{name = "Lautrek", email = "support@lautrek.com"}]
requires-python = ">=3.11"
keywords = ["cad", "blender", "ai", "3d", "modeling", "conjure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = [
    "conjure-cad>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://lautrek.com/conjure"
Documentation = "https://lautrek.com/conjure/docs"
Repository = "https://github.com/Lautrek/conjure-blender"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
