[project]
name = "conjure-blender"
version = "0.1.0"
description = "Blender add-on for AI-assisted 3D modeling with Conjure"
readme = "README.md"
license = "MIT"
authors = [{name = "Lautrek", email = "support@lautrek.com"}]
requires-python = ">=3.11"
keywords = ["cad", "blender", "ai", "3d", "modeling", "conjure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://lautrek.com/conjure"
Documentation = "https://lautrek.com/conjure/docs"
Repository = "https://github.com/Lautrek/conjure-blender"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Blender modules are available at runtime
builtins = ["bpy", "mathutils", "bmesh", "bgl", "gpu", "bl_math"]

[tool.ruff.lint]
# Relax rules for Blender addon code
ignore = [
    "E402",  # Module level import not at top of file (Blender requires conditional imports)
    "F401",  # Imported but unused (Blender uses some imports at runtime)
]
